# CModernApproach

Chapter10/: CMakeLists.txt  RPNCalculator.c  digitalDigits.c  excercises.c  nestedParentheses.c  sandBox.c
Chapter11/: CMakeLists.txt  excercises.c  maxMin.c  sandBox.c
Chapter12/: CMakeLists.txt  excercises.c  palindrome.c  reverse.c  sandBox.c
Chapter13/: CMakeLists.txt  dayFormat.c  excercises.c  planet.c  remind.c  sandBox.c  wordComparison.c
Chapter14/: CMakeLists.txt  excercises.c  sandBox.c
Chapter15/: CMakeLists.txt  excercises.c
Chapter15/InclusionTesting/: CMakeLists.txt  main.c
Chapter15/InclusionTesting/Stack/: CMakeLists.txt
Chapter15/Justification/: CMakeLists.txt  in.txt  main.c  out.txt
Chapter15/Justification/Line/: CMakeLists.txt
Chapter15/Justification/Word/: CMakeLists.txt
Chapter16/: CMakeLists.txt  countryCodeLookup.c  enums.c  excercises.c  partsInventory.c  structs.c  unions.c
Chapter17/: CMakeLists.txt  dynamicArrays.c  excercises.c  functionPointers.c  linkedLists.c  partsInventory2.c  remind2.c  sortStrings.c  stack.c  tabulateTrig.c  voidPointers.c
Chapter18/: CMakeLists.txt  sandBox.c
Chapter18/include/: test.h
Chapter18/src/: test.c
Chapter2/: CMakeLists.txt  dweight.c  printPractice.c  smallestBills.c  sphericalVolume.c  taxCalculator.c
Chapter3/: CMakeLists.txt  fractionAdder.c  grid.c  phoneNumberFormatting.c  productInformation.c  sandBox.c  scanTest.c
Chapter4/: CMakeLists.txt  EAN_Calculator.c  UPC_Calculator.c  digitReader.c  excercises.c  octal.c  sandBox.c
Chapter5/: CMakeLists.txt  departureTimes.c  digitCalculator.c  excercises.c  taxableIncome.c  timeConverter.c
Chapter6/: CMakeLists.txt  GCD.c  calendar.c  checking.c  eulersNumber.c  evenSquares.c  excercises.c  fractionSimplifier.c  largestNumber.c  numDigits.c
Chapter7/: CMakeLists.txt  alphabeticPhone.c  excercises.c  expressionCalculator.c  factorial.c  floatToBinary.c  fractionCalculator.c  lastFirstName.c  newtonsRoot.c  scrabble.c  timeConverter.c  toBinary.c  toOctal.c
Chapter8/: CMakeLists.txt  anagramChecker.c  dealingCards.c  duplicateDigits.c  duplicateDigits2.c  excercises.c  interest.c  magicSquare.c  randomWalk.c  reverseSentences.c  sandBox.c
Chapter9/: CMakeLists.txt  craps.c  excercises.c  power.c  quickSort.c  sandBox.c
(+20 files in other folders)
