cmake_minimum_required(VERSION 3.5)

project(Chapter3)

add_executable(SandBox sandBox.c)
add_executable(ScanTest scanTest.c)
add_executable(ProductInformation productInformation.c)
add_executable(PhoneNumberFormatting phoneNumberFormatting.c)
add_executable(Grid grid.c)
add_executable(FractionAdder fractionAdder.c)
