cmake_minimum_required(VERSION 3.5)

project(Chapter6)

add_executable(NumDigits numDigits.c)
add_executable(Checking checking.c)
add_executable(Excercises excercises.c)
add_executable(LargestNumber largestNumber.c)
add_executable(GCD GCD.c)
add_executable(FractionSimplifier fractionSimplifier.c)
add_executable(EvenSquares evenSquares.c)
add_executable(Calendar calendar.c)
add_executable(EulersNumber eulersNumber.c)
