cmake_minimum_required(VERSION 3.5)

project(Chapter7)

add_executable(ToOctal toOctal.c)
add_executable(ToBinary toBinary.c)
add_executable(FloatToBinary floatToBinary.c)
add_executable(Excercises excercises.c)
add_executable(AlphabeticPhone alphabeticPhone.c)
add_executable(Scrabble scrabble.c)
add_executable(TimeConverter timeConverter.c)
add_executable(FractionCalculator fractionCalculator.c)
add_executable(LastFirstName lastFirstName.c)
add_executable(ExpressionCalculator expressionCalculator.c)
