cmake_minimum_required(VERSION 3.5)

project(Chapter8)

add_executable(SandBox sandBox.c)
add_executable(DuplicateDigits duplicateDigits.c)
add_executable(Interest interest.c)
add_executable(DealingCards dealingCards.c)
add_executable(Excercises excercises.c)
add_executable(DuplicateDigits2 duplicateDigits2.c)
add_executable(RandomWalk randomWalk.c)
add_executable(ReverseSentences reverseSentences.c)
add_executable(AnagramChecker anagramChecker.c)
add_executable(MagicSquare magicSquare.c)
